# mobile-stt-android

./: gradle.properties  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/app/src/main/java/com/example/mobilestt/: MainActivity.java
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/mobilestt/: MainActivity.java  MainActivity.kt  PdfWriterUtil.java  SafeActivity.java
